# dynamic-segment-tree

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
.ci/: build-project-valgrind.sh  build-project-with-clang-cl.ps1  build-project-with-clang.ps1  build-project.ps1  build-project.sh  build_project.sh
.github/workflows/: c-cpp.yml  dev-build-and-test.yml  dev-build.yml  main-build-and-test.yml  main-build.yml
include/: concepts.hpp  disable_operations.hpp  dynamic_max_segment_tree.hpp  dynamic_min_segment_tree.hpp  dynamic_negate_segment_tree.hpp  dynamic_segment_tree.hpp  dynamic_segment_tree_range_get_variation_base.hpp  dynamic_segment_tree_update_variation_base.hpp  dynamic_sum_segment_tree.hpp  lazy_max_segment_tree.hpp  lazy_min_segment_tree.hpp  lazy_segment_tree.hpp  mp.hpp  mpimpl.hpp  node.hpp  operations.hpp
include/curried/: dynamic_avg_segment_tree.hpp  dynamic_max_segment_tree.hpp  dynamic_min_segment_tree.hpp  dynamic_negate_segment_tree.hpp  dynamic_simple_get_set_segment_tree.hpp  dynamic_sum_segment_tree.hpp  simple_get_set_dynamic_segment_tree.hpp
include/dst/: comb.hpp  concepts.hpp  disable_operations.hpp  dynamic_segment_tree.hpp  mp.hpp  upd.hpp
include/dst/curried/: dynamic_avg_segment_tree.hpp  dynamic_max_segment_tree.hpp  dynamic_min_segment_tree.hpp  dynamic_negate_segment_tree.hpp  dynamic_simple_get_set_segment_tree.hpp  dynamic_sum_segment_tree.hpp
include/dst/impl/: dynamic_segment_tree_range_get_variation_base.hpp  dynamic_segment_tree_update_variation_base.hpp  node.hpp  node_base.hpp  node_holder.hpp
include/dst/partial/: dynamic_avg_segment_tree.hpp  dynamic_max_segment_tree.hpp  dynamic_min_segment_tree.hpp  dynamic_negate_segment_tree.hpp  dynamic_simple_get_set_segment_tree.hpp  dynamic_sum_segment_tree.hpp
include/impl/: dynamic_segment_tree_range_get_variation_base.hpp  dynamic_segment_tree_update_variation_base.hpp  node.hpp  node_base.hpp
src/: dynamic_avg_segment_tree.cpp  dynamic_max_segment_tree.cpp  dynamic_min_segment_tree.cpp  dynamic_negate_segment_tree.cpp  dynamic_segment_tree.cpp  dynamic_segment_tree_range_get_variation_base.cpp  dynamic_segment_tree_update_variation_base.cpp  dynamic_simple_get_set_segment_tree.cpp  dynamic_sum_segment_tree.cpp  mp.cpp  node.cpp
test/: CMakeLists.txt  allocate_n_times_then_throw.cpp  allocator_common.cpp  base_test.cpp  boost_adaptive_pool.cpp  boost_allocator.cpp  max_seg_tree_reference.hpp  max_test.cpp  min_test.cpp  negate_test.cpp  node.cpp  sum_test.cpp  test.cpp  test_avg.cpp  test_copy_and_move_counter.cpp  test_copy_and_move_counts.cpp  test_copy_count.cpp  test_copy_counter.cpp  test_copy_only_copy_counter.cpp  test_max.cpp  test_min.cpp  test_negate.cpp  test_simple.cpp  test_sum.cpp
test/boost/: CMakeLists.txt
test/copy_counter/: copy_counter.cpp  copy_counter.hpp
test/counters/: construction_and_destruction_counter.cpp  construction_and_destruction_counter.hpp  copy_and_move_counter.cpp  copy_and_move_counter.hpp  copy_only_copy_counter.cpp  copy_only_copy_counter.hpp  destroy_counter.hpp
test/reference/: avg_seg_tree_reference.hpp  max_seg_tree_reference.hpp  min_seg_tree_reference.hpp  seg_tree_reference_base.hpp  sum_seg_tree_reference.hpp
test/tools/: allocate_n_times_then_throw.cpp  allocate_n_times_then_throw.hpp  copy_n_times_then_throw.cpp  copy_n_times_then_throw.hpp  generate_index_range.hpp  info_stream.cpp  info_stream.hpp  non_movable_and_non_copyable.hpp  non_movable_and_non_copyable_avg_combiner.hpp
